@@ -125,6 +125,7 @@ class EdToolBar(wx.ToolBar):
 
         """
         self._theme = Profile_Get('ICONS')
+        csize = self.GetToolBitmapSize()
         self.SetToolBitmapSize(Profile_Get('ICON_SZ', 'size_tuple'))
         if self.GetToolBitmapSize() == (16, 16):
             client = wx.ART_MENU
@@ -134,3 +135,10 @@ class EdToolBar(wx.ToolBar):
         for tool_id in TOOL_ID:
             bmp = wx.ArtProvider.GetBitmap(str(tool_id), client)
             self.SetToolNormalBitmap(tool_id, bmp)
+
+        # HACK: to make toolbar resize properly when icon size changes
+        if csize != self.GetToolBitmapSize():
+            self.GetParent().Freeze()
+            self.Hide()
+            self.Show()
+            self.GetParent().Thaw()
